--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,8 +1,8 @@
 apiVersion: 1.0.0
 metadata:
-  name: asciiedit01
+  name: markdown01
 projects:
-  - name: someproject
+  - name: recipes01
     source:
       location: 'https://github.com/sttyerase/Great-Recipes.git'
       type: git
