--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,10 +4,10 @@ metadata:
 projects:
   - name: recipes01
     source:
-      location: 'https://github.com/sttyerase/Great-Recipes.git'
       type: git
+      location: 'https://github.com/sttyerase/Great-Recipes.git'
       branch: new_recipes
-    clonePath: projects/
+    clonePath: /projects/
 components:
   - id: ms-vscode/vscode-github-pullrequest/latest
     type: chePlugin
