--- a/devfile.yaml
+++ b/devfile.yaml
@@ -7,7 +7,7 @@ projects:
       type: git
       location: 'https://github.com/sttyerase/Great-Recipes.git'
       branch: new_recipes
-    clonePath: projects/
+    clonePath: Great-Recipes/
 components:
   - id: ms-vscode/vscode-github-pullrequest/latest
     type: chePlugin
