--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,19 +1,10 @@
-schemaVersion: 2.1.0
-apiVersion: 1.0.0
+schemaVersion: 2.0.0
 metadata:
-  name: markdown01
+  name: great-recipes
 projects:
   - name: recipes01
-    source:
-      type: git
-      location: 'https://github.com/sttyerase/Great-Recipes.git'
-      branch: new_recipes
-    clonePath: Great-Recipes/
-components:
-  - id: ms-vscode/vscode-github-pullrequest/latest
-    type: chePlugin
-  - type: dockerimage
-    image: docker.io/dbmidocker/jekyll-poc:latest
-    alias: myjekyll
-    memoryLimit: 1Gi
-    mountSources: true
+    git:
+      remotes:
+        origin: 'https://github.com/sttyerase/Great-Recipes.git'
+      checkoutFrom:
+        revision: main
